--- a/SpringPrimero-1/src/main/resources/templates/buscarAño.html
+++ b/SpringPrimero-1/src/main/resources/templates/buscarAño.html
@@ -4,12 +4,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 </head>
 <body>
+
+    <h1 th:text="${año}"></h1>
     <img th:src="@{/images/logo.png}" width="136px" height="136px">
-    <h1 class="text-primary">Lista de Vacantes</h1>
     <table class="table table-stripped table-bordered table-hover">
         <tr>
             <th>Logo</th>
@@ -20,7 +20,7 @@
             <th>Descripción</th>
             <th>Destacada</th>
         </tr>
-        <tr th:each="v : ${vacantes}">
+        <tr th:each="v : ${vacante}">
             <td>
                 <img th:src="@{/images/{img} (img=${v.imagen})}" width="136px" height="136px">
             </td>
@@ -36,7 +36,7 @@
             </td>
         </tr>
     </table>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
 </html>
