--- a/sp_06/sp_06/src/main/resources/templates/fragments/menu.html
+++ b/sp_06/sp_06/src/main/resources/templates/fragments/menu.html
@@ -6,17 +6,29 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/vacantes/index}">Vacantes</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/categorias/index}">Categorias</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Menu 2</a>
-      </li>          
-    </ul>  
-    <a class="btn btn-primary" href="#">Ingresar</a>&nbsp;
-    <a class="btn btn-primary" href="#">Registrarse</a>
+      <li class="nav-item" sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
+      <a class="nav-link" th:href="@{/solicitudes/indexPaginate}">Solicitudes</a>
+	   </li>
+	   <li class="nav-item" sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
+	      <a class="nav-link" th:href="@{/vacantes/indexPaginate}">Vacantes</a>
+	   </li>
+	   <li class="nav-item" sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
+	      <a class="nav-link" th:href="@{/categorias/indexPaginate}">Categorías</a>
+	   </li>
+	   <li class="nav-item" sec:authorize="hasAnyAuthority('ADMINISTRADOR')">
+	      <a class="nav-link" th:href="@{/usuarios/index}" >Usuarios</a>
+	   </li>
+	   <li class="nav-item">
+        <a class="nav-link" th:href="@{/about}">Acerca</a>
+      </li>                    
+    </ul>
+    <div sec:authorize="isAnonymous()">
+		<a class="btn btn-primary" th:href="@{/index}">Ingresar</a>&nbsp;
+		<a class="btn btn-primary" th:href="@{/signup}">Registrarse</a>
+	</div>	    
+    <div sec:authorize="isAuthenticated()">
+		<span class="text-light">Bienvenido</span>&nbsp;<span class="text-light" sec:authentication="name"></span>&nbsp;
+		<a class="btn btn-primary" th:href="@{/logout}">Salir</a>
+	</div>    
   </div>
-</nav>
+</nav>     
