--- a/Spring_scott/src/main/resources/templates/fragments/footer.html
+++ b/Spring_scott/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,12 @@
-<div th:fragment="pie-pagina" class="container">
-  <p>
-    &copy; 2026 EmpleosApp, Inc. | WebApp Desarrollada con Spring Boot 4.0.0 | Autor: Iv&aacute;n E. Tinajero D&iacute;az | &middot; <a href="#">Privacy</a>
-    &middot; <a href="#">Terms</a>
-  </p>
-</div>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<body>
+
+<footer th:fragment="pie-pagina" class="footer mt-auto py-3 bg-light">
+  <div class="container text-center">
+    <span class="text-muted">Desarrollado por Roy para 2º DAM - &copy; 2026 SpringScott Project.</span>
+  </div>
+</footer>
+
+</body>
+</html>
