--- a/Spring_scott/src/main/resources/templates/fragments/menu.html
+++ b/Spring_scott/src/main/resources/templates/fragments/menu.html
@@ -1,34 +1,48 @@
-<nav th:fragment="menu-principal" class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" th:href="@{/}">EmpleosApp</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<body>
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item" sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
-      <a class="nav-link" th:href="@{/solicitudes/indexPaginate}">Solicitudes</a>
-	   </li>
-	   <li class="nav-item" sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
-	      <a class="nav-link" th:href="@{/vacantes/indexPaginate}">Vacantes</a>
-	   </li>
-	   <li class="nav-item" sec:authorize="hasAnyAuthority('SUPERVISOR','ADMINISTRADOR')">
-	      <a class="nav-link" th:href="@{/categorias/indexPaginate}">Categorías</a>
-	   </li>
-	   <li class="nav-item" sec:authorize="hasAnyAuthority('ADMINISTRADOR')">
-	      <a class="nav-link" th:href="@{/usuarios/index}" >Usuarios</a>
-	   </li>
-	   <li class="nav-item">
-        <a class="nav-link" th:href="@{/about}">Acerca</a>
-      </li>                    
-    </ul>
-    <div sec:authorize="isAnonymous()">
-		<a class="btn btn-primary" th:href="@{/index}">Ingresar</a>&nbsp;
-		<a class="btn btn-primary" th:href="@{/signup}">Registrarse</a>
-	</div>	    
-    <div sec:authorize="isAuthenticated()">
-		<span class="text-light">Bienvenido</span>&nbsp;<span class="text-light" sec:authentication="name"></span>&nbsp;
-		<a class="btn btn-primary" th:href="@{/logout}">Salir</a>
-	</div>    
-  </div>
-</nav>     
+<div th:fragment="menu-principal">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" th:href="@{/}">SpringScott</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" th:href="@{/}">Inicio <span class="sr-only">(current)</span></a>
+        </li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/empleados/index}">Gestión de Empleados</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/departamentos/index}">Departamentos</a>
+		</li>
+        </ul>
+      
+      <ul class="navbar-nav ml-auto">
+        
+        <li class="nav-item" sec:authorize="!isAuthenticated()">
+            <a class="btn btn-outline-light mr-2" th:href="@{/signup}">Registrarse</a>
+        </li>
+        <li class="nav-item" sec:authorize="!isAuthenticated()">
+            <a class="btn btn-primary" th:href="@{/login}">Ingresar</a>
+        </li>
+
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+            <span class="navbar-text text-white mr-3">
+                Hola, <span sec:authentication="name">Usuario</span>
+            </span>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+            <a class="btn btn-danger" th:href="@{/logout}">Salir</a>
+        </li>
+      </ul>
+      
+    </div>
+  </nav>
+</div>
+
+</body>
+</html>
